fixed spacing for project page (responsive)

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 h1 {
   font-family: var(--heading-font-family);
-  font-size: 100px;
+  font-size: 120px;
   background: #c4945c;
   background: linear-gradient(
     to right,
@@ -148,7 +148,7 @@ a:hover {
 }
 .contact-container {
   background-color: var(--branding-color);
-  margin: 50px 100px;
+  margin: 100px 100px;
   padding: 70px;
   border-radius: 20px;
 }
